--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
     background-color: #e7e7e7;
     border-radius: 10px;
     padding: 3%;
-    margin: 50px 0;
+    margin: 20px 0;
   }
   .total-price span {
     font-size: 30px;
@@ -65,4 +65,9 @@
   
   .fa-trash-alt {
     color: #de6b5c;
+  }
+  .card-img-top{
+    height: 90px;
+    width: 90px;
+    
   }
